  * raggle.pod: changed raggle contact to raggle-dev@raggle.org
  * doc/pauls_feeds.yaml: updated KernelTrap URL
  * doc/pauls_feeds.yaml: removed Google News links
  * raggle: added 'I' key to force a feed update (invalidate)
  * raggle: handle host-relative HTTP redirects properly
  * raggle: fix date string bug
  * raggle: update Pablotron RSS URL
  * extras/rss_dir_list.rb: add version to rss element
  * doc/pauls_feeds.yaml: removed broken links, sorted, etc
  * added doc/pauls_feeds.opml.gz

* Sun Aug 17 12:24:40 2003, pabs <pabs@pablotron.org>
  * raggle: releasing version 0.2.0

* Sun Aug 17 12:34:35 2003, pabs <pabs@pablotron.org>
  * raggle: incrementing versoin number to 0.3.0
  * README: ditto

* Mon Aug 18 11:35:41 2003, pabs <pabs@pablotron.org>
  * raggle: apply patch from Ville to fix terminal resize bug reported
    by mgarriss@earthlink.net

* Mon Aug 18 11:54:43 2003, pabs <pabs@pablotron.org>
  * raggle: Window#refresh should muck with @win, not win

* Tue Aug 19 14:03:11 2003, pabs <pabs@pablotron.org>
  * raggle: apply fix from mgarriss@earthlink.net for "connection is already
    set up" bug

* Tue Aug 19 14:14:02 2003, pabs <pabs@pablotron.org>
  * BUGS: mark "connection is already set up" off the list

* Tue Aug 19 17:35:35 2003, pabs <pabs@pablotron.org>
  * raggle: don't restrict ourselves to ruby1.8 (dont' know how that got
    there...)

* Wed Aug 20 15:37:36 2003, pabs <pabs@pablotron.org>
  * raggle: fix nil in HTML::Parser::each_token reported by
    mgarriss@earthlink.net
  * raggle: clean up Ville's evil tabbing ;).
  * raggle: fix thread_priority_* unset in config bug reported by
    Richard Zidlicky <rz@linux-m68k.org

* Wed Aug 20 16:50:22 2003, pabs <pabs@pablotron.org>
  * raggle: explicitly invoke the GC at user-defined interval
  * raggle: slightly more concise fix to unset thread priorities in
    config

* Wed Aug 20 16:54:47 2003, pabs <pabs@pablotron.org>
  * BUGS: add entry for memory leak