@@ -3,16 +3,17 @@ BINDIR=${PREFIX}/bin
 MANDIR=${PREFIX}/man/man1
 DOCDIR=${PREFIX}/share/doc/raggle
 DATADIR=${PREFIX}/share/raggle
-DATA=themes
+DATA=themes extras
 DOCS=doc/* AUTHORS BUGS COPYING ChangeLog README
+mkdir=/bin/mkdir -p
 
 install :
 	cp raggle ${BINDIR} && \
 	if [ ! -d "${DOCDIR}" ]; then \
-		mkdir ${DOCDIR}; \
+		${mkdir} ${DOCDIR}; \
 	fi && \
 	if [ ! -d "${DATADIR}" ]; then \
-		mkdir ${DATADIR}; \
+		${mkdir} ${DATADIR}; \
 	fi && \
 	cp raggle.1 ${MANDIR} && \
 	cp -r ${DOCS} ${DOCDIR} && \
